1.修复了三级联动显示的bug 2.增加解析了购物车列表、加入购物车、删除商品接口功能 3.增加解析找回密码和修改密码接口 4.增加手机短信注册及找回密码接口解析 5.修复删除不是指定商品bug 6.修复地址列表删除后没实时更新bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="tencent1106221777" />
+                <data android:scheme="tencent101417189" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -71,7 +78,8 @@
         <activity android:name=".user.view.Position2Activity" />
         <activity android:name=".user.view.address.AddressActivity" />
         <activity android:name=".user.view.address.AddressListActivity" />
-        <activity android:name=".user.view.address.AddressEditActivity"></activity>
+        <activity android:name=".user.view.address.AddressEditActivity" />
+        <activity android:name=".user.view.FindPasswordActivity"></activity>
     </application>
 
 </manifest>
