--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     compile files('src/main/java/libs/mta-sdk-1.6.2.jar')
     compile files('src/main/java/libs/open_sdk_r5793_lite.jar')
     compile files('libs/alipaySdk-20160809.jar')
-   // compile 'com.android.support:appcompat-v7:25.3.1'
+    // compile 'com.android.support:appcompat-v7:25.3.1'
+    //compile 'com.bigkoo:pickerview:2.0.8'
+    //compile 'com.bigkoo:pickerview:2.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -49,14 +51,14 @@ dependencies {
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:percent:23.3.0'
-    //compile 'com.bigkoo:pickerview:2.0.8'
-    //compile 'com.bigkoo:pickerview:2.1.1'
     compile 'com.chanven.lib:cptr:1.0.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.contrarywind:Android-PickerView:3.2.6'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
+
 
 
 
