--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     }
     defaultConfig {
-        applicationId "com.example.hongaer.shoppingmall2"
+        applicationId "com.nbjinque.jqmall"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -27,6 +27,16 @@ android {
     }
 }
 
+repositories {
+
+    maven {
+        url "http://mvnrepo.alibaba-inc.com/mvn/repository"
+    }
+
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -36,15 +46,56 @@ dependencies {
     compile project(':gradationscroll')
     compile files('src/main/java/libs/mta-sdk-1.6.2.jar')
     compile files('src/main/java/libs/open_sdk_r5793_lite.jar')
-    compile files('libs/alipaySdk-20160809.jar')
+    //compile files('libs/alipaySdk-20160809.jar')
     // compile 'com.android.support:appcompat-v7:25.3.1'
     //compile 'com.bigkoo:pickerview:2.0.8'
     //compile 'com.bigkoo:pickerview:2.1.1'
+    compile files('src/main/java/libs/android-async-http-1.4.9.jar')
+    //compile 'com.android.support:appcompat-v7:23.4.0'
+    //compile files('libs/wechat-sdk-android-with-mta-1.0.2.jar')
+    
+
+    //支付
+    //compile 'com.alibaba.alipay:alipaySingle:20160825@jar'
+
+
+
+    //compile 'com.taobao.android:utdid4all:1.1.5.3_proguard@jar'
+    //【可选】仅供特殊合作伙伴使用
+    // compile 'com.ali.auth.sdk:alibabauth_accountlink:1.1.4@jar'
+
+    //【可选】安全高级，如使用了发放红包、优惠券高级功能，则必须引入
+    //compile 'com.taobao.android:securitybodyaar3:5.1.25@aar'
+    //Mtop网关
+  /*  compile 'com.taobao.android:mtopsdk_allinone_open:1.2.2.4@jar'
+    //applink
+    compile 'com.alibaba.sdk.android:alibc_link_partner:1.1.0.0'
+    UT
+    compile 'com.taobao.android:utdid4all:1.1.5.3_proguard@jar'
+    compile 'com.alibaba.mtl:app-monitor-sdk:2.5.1.3_for_bc_proguard@jar'
+    //联盟SDK
+    compile 'com.alimama.tunion.sdk:tuniontradesdk:0.3.1'*/
+    //    fastjson
+    //支付
+   // compile 'com.alibaba.alipay:alipaySingle:20160825@jar'
+    //【可选】仅供特殊合作伙伴使用
+    //登陆
+    //安全基础
+    //Mtop网关
+    //applink
+    //联盟SDK
+    //电商SDK
+    //compile 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.11@aar'
+    
+    //compile 'com.alibaba.mtl:app-monitor-sdk:2.5.1.3_for_bc_proguard@jar'
+
+    //UT
+    //compile 'com.taobao.android:utdid4all:1.1.5.3_proguard@jar'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.zhy:okhttputils:2.6.2'
-    compile 'com.alibaba:fastjson:1.1.59.android'
+    compile 'com.alibaba:fastjson:1.2.9'
     compile 'com.youth.banner:banner:1.3.2'
     compile 'com.zhy:magic-viewpager:1.0.1'
     compile 'com.google.code.gson:gson:2.8.1'
@@ -53,11 +104,45 @@ dependencies {
     compile 'com.android.support:percent:23.3.0'
     compile 'com.chanven.lib:cptr:1.0.0'
     compile 'com.contrarywind:Android-PickerView:3.2.6'
-    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    testCompile 'junit:junit:4.12'
+    compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'junit:junit:4.12'
+    compile 'com.ali.auth.sdk:alibabauth_accountlink:1.1.4@jar'
+    compile 'com.ali.auth.sdk:alibabauth_core:1.1.4@jar'
+    compile 'com.ali.auth.sdk:alibabauth_ui:1.1.4@aar'
+    compile 'com.ali.auth.sdk:alibabauth_ext:1.1.4@jar'
+    compile 'com.taobao.android:securityguardaar3:5.1.81@aar'
+    compile 'com.taobao.android:mtopsdk_allinone_open:1.2.2.4@jar'
+    compile 'com.alibaba.sdk.android:alibc_link_partner:1.1.0.0'
+    compile 'com.alimama.tunion.sdk:tuniontradesdk:0.3.1'
+    compile 'com.alibaba.sdk.android:alibc_trade_common:3.1.1.203'
+    compile 'com.alibaba.sdk.android:alibc_trade_biz:3.1.1.203'
+    compile 'com.alibaba.sdk.android:alibc_trade_sdk:3.1.1.203'
+    compile 'com.alibaba.mtl:app-monitor-sdk:2.5.1.3_for_bc_proguard@jar'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
+
+/*buildscript {
+    repositories {
+      jcenter()
+       *//* maven {
+            url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+        }*//*
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.3'   //last version Jan 2016
+    }
+}*/
+/*
+repositories {
+    jcenter()
+}
+*/
+
+
+
+
+
 
 
 
