--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.hongaer.shoppingmall2">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,12 +14,13 @@
 
     <application
         android:name=".app.MyApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/splash1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/mainAppTheme">
+        android:theme="@style/mainAppTheme"
+        tools:replace="android:icon, android:theme,android:allowBackup">
         <activity
             android:name=".app.MainActivity"
             android:launchMode="singleTask" />
@@ -46,6 +48,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
             android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
@@ -60,12 +67,15 @@
         <activity android:name=".app.GuideActivity" />
         <activity android:name=".app.LoginActivity" />
         <!-- alipay sdk begin -->
-        <activity
+        <!--
+            <activity
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation|screenSize"
             android:exported="false"
             android:screenOrientation="behind"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+        -->
+
 
         <!-- QQ登录配置 end -->
 
@@ -79,7 +89,11 @@
         <activity android:name=".user.view.address.AddressActivity" />
         <activity android:name=".user.view.address.AddressListActivity" />
         <activity android:name=".user.view.address.AddressEditActivity" />
-        <activity android:name=".user.view.FindPasswordActivity"></activity>
+        <activity android:name=".user.view.FindPasswordActivity" />
+        <activity android:name=".shoppingcart.view.ConfirmOrderActivity" />
+        <activity android:name=".user.view.PersonActivity" />
+        <activity android:name=".user.view.NickEditActivity" />
+        <activity android:name=".user.view.ForUsActivity"></activity>
     </application>
 
 </manifest>
