--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,24 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+        }
+      /*  maven { url "http://maven.oschina.net/content/groups/public/" }*/
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+        }
+       /* maven { url "http://maven.oschina.net/content/groups/public/" }*/
     }
 }
 
