--- a/gradationscroll/build.gradle
+++ b/gradationscroll/build.gradle
@@ -19,9 +19,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    provided fileTree(include: ['*.jar'], dir: 'libs')
+    provided 'junit:junit:4.12'
+    provided 'com.android.support:appcompat-v7:23.4.0'
 }
 //添加
 //publish {
